[tool.poetry]
name = "clustrun"
version = "0.1.12"
description = "A tool for distributing tasks across a range of servers using SSH"
authors = ["Jon Stutters <j.stutters@ucl.ac.uk>"]
license = "MIT"
packages = [
    {include = "clustrun", from = "src"}
]

[tool.poetry.dependencies]
python = ">=3.4"
click = "^7.0"
fabric = "^2.4"
pyyaml = "^3.13"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
clustrun = 'clustrun:main.run'
